# ImmoScanner

./: .gitignore  .pre-commit-config.yaml  ImmoScanner.sln  README.md  pyproject.toml  requirements.txt
ImmoScanner/: Console.py  ImmoScanner.py  ImmoScanner.pyproj  MaConsole.py  homegate.txt  requirements.txt
ImmoScanner/Countries/: Belgium.py  Country.py  CountryFactory.py  Switzerland.py
ImmoScanner/Intellectuals/: SavantesStatistiques.py  StatisticalInsights.py
ImmoScanner/Intellectuels/: SavantesStatistiques.py
ImmoScanner/Means/: RealEstateResearch.py  RealEstateResearchResult.py  RechercheImmo.py  Research.py  ResearchResult.py  ResultatsRechercheImmo.py
ImmoScanner/Moyens/: Recherche.py  RechercheImmo.py  ResultatsRecherche.py  ResultatsRechercheImmo.py
ImmoScanner/Travailleurs/: Immoweb.py  Travailleur.py  TravailleurImmo.py
ImmoScanner/Workers/: Comparis.py  Homegate.py  ImmoVlan.py  Immoweb.py  RealEstateWorker.py  Travailleur.py  TravailleurImmo.py  Worker.py
