[tool.poetry]
name = "immoscanner"
version = "0.1.0"
description = "Allows scanning of real estates websites"
authors = ["Simon Uyttenhove"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
playwright = "^1.29.0"
pycountry = "^22.3.5"
price-parser = "^0.3.4"
plac = "^1.4.3"

[tool.poetry.group.dev.dependencies]
beautifulsoup4 = "^4.11.1"
tldextract = "^3.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
